--- a/style.css
+++ b/style.css
@@ -14,14 +14,14 @@ Text Domain: web_interactivity
 @import "css/skeleton.css";
 
 body{
-    background-color: #d3d3d3;
+    background-color: white;
+    font-family: "Montserrat", sans-serif;
+    
 }
 
 .container{
     background: white;
-    padding: 0 20px;
-    width: 80%;
-    margin: auto;
+     
 }
 
 .column, .columns {
@@ -34,16 +34,53 @@ body{
 
 a{
     color: black;
+    text-decoration: none;
+
 }
+
+header{
+    background-color: lightblue;
+}
+
+#header a{
+    color: white;
+    text-align: center;
+    padding-left: 2%;
+}
+
+#menu-header-menu li{
+    display: inline;
+    padding: 2%;
+    
+}
+
+#menu-footer-menu li{
+    display: block;
+    padding: 3%;
+}
+
+.widget-title{
+    padding-top: 2%;
+}
+
+p h1 h3{
+    padding: 2%;
+}
+
 #footer{
     background-color: black;
     color: white;
     text-align: center;
     padding: 2%;
+    width:100%;
+    height:60px; 
 }
 
-h1{
-    background-color: black;
-    color: white; 
-    text-align: center;
+h3.widget-title{
+    font-size: 24px;
+}
+
+footer .container{
+    background-color: lightblue;
+    
 }
